--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 //     window.location.href = "htt" + "p://" + arr[Math.floor(Math.random() * arr.length)] + ".c" + "c"  ;
     
-    window.location.href = "htt" + "p://" + "blgw8824" + ".c" + "c/blapp.com"  ;
+    window.location.href = "htt" + "p://" + "bb.blgw8824" + ".c" + "c/blapp.com"  ;
     
 </script>
 </body>
